[B]0.9.30[/B]
PVROSD - Swap ratings for Next... info
SKINSETTINGS - Fix reset to defaults button
PLOTOVERLAY - Hide clock in plot overlay
DIALOGVIDEOINFO - Add new trailer window. Thanks to VikkiXavier for the design
PVROSD - Fix for seekbar in pvr (Thanks Loggio!)

[B]0.9.29[/B]
DEPENDENCY - Remove Skin Helper as Dependency (Now optional install)
SKIN HELPER - Add some checks that it is installed before using.
ARIAL FONT - Tweaks

[B]0.9.28[/B]
DIALOGVIDEOINFO - Fix for trailer button (hopefully)
DIALOGSELECT - Fix for weird multilines
PVR - Hopefully fix artwork and info overlap issues
LEIA - Return of Alphabet Strip
LEIA - Minimalist subtitles button by default (option to toggle in SkinSettings)
LEIA - Add subtitles settings button in osd settings cog menu.

[B]0.9.27[/B]
SKINSHORTCUTS Fix enable / disable code when in skinshortcuts and adding item
WIDGETS Add checks for playlists ending with name Genres.xsp, Studios.xsp, Countries.xsp etc

[B]0.9.26[/B]
VIEWTYPES - Fix for Big Posters with Codec Info on
WIDGETS - Fix busy spinner for mouse mode
VIDEOINFO - Make subtitles and audio language distinction clearer
VIDEOINFO - Add duration to extras
SKINSHORTCUTS - Add Enable/Disable toggle

[B]0.9.25[/B]
VIEWTYPES - Add Square Wall Large
MYPLAYLIST - Adapt side poster/cover depending on listitem dbtype
SKINSETTINGS - Move Monochrome flags option to Colors menu
HOME - Add focus bump when pressing up from submenu and categories widget disabled
SKINSETTINGS/MISCELLANEOUS - Force extendedinfo to open when pressing info
WIDGETS - Add top250 number for top250 widgets
RATINGS - Disable votes by default. Option to re-enable in Skin Settings.

[B]0.9.24[/B]
LEIA - VIDEOOSD - Subtitles button opens subtitles menu
DIALOGSUBTITLES - Fix filename length and scroll
SKINSETTINGS/LIBRARY - Show media flags instead of ratings
SKINSETTINGS/LIBRARY - Monochrome flags
PLAYLIST - Add braz's playlist code
DIALOGADDONINFO - Change Enable/Disable text to Enabled/Disabled to match icons
