@@ -1,0 +1,88 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Foundation -->
+<window type="dialog" id="1119">
+    <defaultcontrol always="true">9000</defaultcontrol>
+    <controls>
+        <include>Global_Overlay</include>
+        <control type="group">
+            <include content="Dialog_Standard_Group">
+                <param name="width" value="820" />
+                <param name="height" value="723" />
+            </include>
+
+            <control type="label">
+                <description>Header Label</description>
+                <label>[CAPITALIZE]$LOCALIZE[31407][/CAPITALIZE]</label>
+                <include>Dialog_Standard_Header</include>
+            </control>
+
+            <control type="grouplist" id="9000">
+                <description>Control Area</description>
+                <right>20</right>
+                <width>780</width>
+                <top>100</top>
+                <height>672</height>
+                <itemgap>10</itemgap>
+                <orientation>vertical</orientation>
+                <pagecontrol>60</pagecontrol>
+                <usecontrolcoords>true</usecontrolcoords>
+                <control type="radiobutton" id="9001">
+                    <label>$LOCALIZE[206]</label>
+                    <radioposx>730</radioposx>
+                    <include>Dialog_Standard_ListButton</include>
+                    <onclick>Skin.ToggleSetting(VideoInfo.CastList)</onclick>
+                    <selected>!Skin.HasSetting(VideoInfo.CastList)</selected>
+                </control>
+                <control type="radiobutton" id="9002">
+                    <label>$LOCALIZE[31400]</label>
+                    <radioposx>730</radioposx>
+                    <include>Dialog_Standard_ListButton</include>
+                    <onclick>Skin.ToggleSetting(VideoInfo.DirectorMovies)</onclick>
+                    <selected>!Skin.HasSetting(VideoInfo.DirectorMovies)</selected>
+                </control>
+                <control type="radiobutton" id="9003">
+                    <label>$LOCALIZE[31401]</label>
+                    <radioposx>730</radioposx>
+                    <include>Dialog_Standard_ListButton</include>
+                    <onclick>Skin.ToggleSetting(VideoInfo.NextUp)</onclick>
+                    <selected>!Skin.HasSetting(VideoInfo.NextUp)</selected>
+                </control>
+                <control type="radiobutton" id="9004">
+                    <label>$LOCALIZE[31402]</label>
+                    <radioposx>730</radioposx>
+                    <include>Dialog_Standard_ListButton</include>
+                    <onclick>Skin.ToggleSetting(VideoInfo.SimilarMovies)</onclick>
+                    <selected>!Skin.HasSetting(VideoInfo.SimilarMovies)</selected>
+                </control>
+                <control type="radiobutton" id="9005">
+                    <label>$LOCALIZE[31403]</label>
+                    <radioposx>730</radioposx>
+                    <include>Dialog_Standard_ListButton</include>
+                    <onclick>Skin.ToggleSetting(VideoInfo.SimilarTvShows)</onclick>
+                    <selected>!Skin.HasSetting(VideoInfo.SimilarTvShows)</selected>
+                </control>
+                <control type="radiobutton" id="9006">
+                    <label>$LOCALIZE[31404]</label>
+                    <radioposx>730</radioposx>
+                    <include>Dialog_Standard_ListButton</include>
+                    <onclick>Skin.ToggleSetting(VideoInfo.StudioMovies)</onclick>
+                    <selected>!Skin.HasSetting(VideoInfo.StudioMovies)</selected>
+                </control>
+                <control type="radiobutton" id="9007">
+                    <label>$LOCALIZE[31405]</label>
+                    <radioposx>730</radioposx>
+                    <include>Dialog_Standard_ListButton</include>
+                    <onclick>Skin.ToggleSetting(VideoInfo.ExtraFanart)</onclick>
+                    <selected>!Skin.HasSetting(VideoInfo.ExtraFanart)</selected>
+                </control>
+                <control type="radiobutton" id="9008">
+                    <label>$LOCALIZE[31406]</label>
+                    <radioposx>730</radioposx>
+                    <include>Dialog_Standard_ListButton</include>
+                    <onclick>Skin.ToggleSetting(VideoInfo.SpecialFeatures)</onclick>
+                    <selected>!Skin.HasSetting(VideoInfo.SpecialFeatures)</selected>
+                </control>
+            </control>
+        </control>
+    </controls>
+</window>
