@@ -21,7 +21,7 @@
             </item>
             <item>
                 <icon />
-                <label>$LOCALIZE[31400]</label>
+                <label>$LOCALIZE[31408]</label>
                 <onclick>ActivateWindow(osdsubtitlesettings)</onclick>
             </item>
             <item>
