@@ -1,4 +1,5 @@
 [B]0.9.30[/B]
+SKINSETTINGS - Add options to disable info dialog lists
 PVROSD - Swap ratings for Next... info
 SKINSETTINGS - Fix reset to defaults button
 PLOTOVERLAY - Hide clock in plot overlay
